Refactored core message structure to use records.